create sign in page elements

--- a/src/app/security/signin/signin.component.html
+++ b/src/app/security/signin/signin.component.html
@@ -1,1 +1,33 @@
-<p>signin works!</p>
+<!--
+  title: signin.component.html
+  author: ngi bujri
+  date: september 13 2023
+  description: sign in page
+-->
+
+<!-- page container -->
+<div class="container">
+  <h1>Bob's Computer Repair Shop</h1>
+  <!-- form container -->
+  <div class="form-container">
+    <h2>User Sign In</h2>
+    <form>
+      <!-- email -->
+      <div>
+        <label for="email">Email:</label>
+        <input type="text" id="email" />
+      </div>
+      <!-- password -->
+      <div>
+        <label for="password">Password:</label>
+        <input type="text" id="password" />
+      </div>
+      <!-- buttons -->
+      <div>
+        <button>Sign In</button>
+        <button>Forgot Password?</button>
+        <button>Register</button>
+      </div>
+    </form>
+  </div>
+</div>
