--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -7,7 +7,7 @@ Source: Professor Krasso, Angular.io -->
 <footer class="mt-5 container-fluid text-center bg-dark p-5">
   <div class="container p-5 fst-italic">
     <p> &copy; Copyright 2023. All Rights Reserved.</p>
-    <p><a href="mailto:support@nodebucket.com" class=" text-underline-hover">support@bcrs.com</a>
+    <p><a href="mailto:support@bcrs.com" class=" text-underline-hover">support@bcrs.com</a>
     </p>
     <a href="https://www.facebook.com/bcrs" target="_blank">
       <img src="assets/facebook-logo.png" alt="black and white facebook logo" class="pe-4">
