started the styling of the navigation bar

--- a/src/app/layouts/nav/nav.component.html
+++ b/src/app/layouts/nav/nav.component.html
@@ -1,8 +1,7 @@
-/**
-* Title: nav.component.html
-* Modified by: Caitlynne Johnson 
-* Date: 9/13/23
-*/
+<!-- Title: nav.component.html
+Modified by: Caitlynne Johnson
+Date: 9/13/23 
+-->
 
 <nav class="ps-3 navbar navbar-expand-sm navbar-danger bg-danger fixed top">
     <a routeLink="/" class="navbar-brand">Bob's Computer Repair Services</a>
