--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,28 @@
-<div class="container-fluid">
+
+<!-- Title: home.component.html 
+      Modified by: Caitlynne Johnson
+      Date: 9/13/23-->
+
+<div class="container">
   <div class="row">
-    <div class="col">
-      <h1>Home Component Works! <span class="material-icons">thumb_up</span></h1>
+    <div class="col-lg-6 mb-4 p-4">
+      <div class="card">
+
+        <div class="card-body">
+          <h5 class="card-title"> Card title</h5>
+          <p class="card-text"> This is an example of some text to see how the card works and can expand as needed for information. </p>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-6 mb-4 p-4">
+      <div class="card">
+
+        <div class="card-body">
+          <h5 class="card-title"> Card title</h5>
+          <p class="card-text"> This is an example of some text to see how the card works and can expand as needed for information. </p>
+        </div>
+      </div>
     </div>
   </div>
-
-  <a routerLink="/security">Test Security Module</a>
 </div>
-
 
