added attribution to all files

--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -1,5 +1,5 @@
 <!-- Title: footer.component
-Author: Megan Walker
+Author: Megan Walker, Ngi Bujri, Caitlynne Johnson
 Date: 09-13-2023
 Description: Footer component for bcrs
 Source: Professor Krasso, Angular.io -->
