--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+/* Title: styles
+Author: Megan Walker, Ngi Bujri, Caitlynne Johnson
+Date: 09-14-2023
+Description: Styles
+Source: Professor Krasso, Angular.io */
