--- a/src/app/layouts/base-layout/base-layout.component.html
+++ b/src/app/layouts/base-layout/base-layout.component.html
@@ -1,3 +1,9 @@
+<!-- Title: base-layout.component
+Author: Megan Walker,  Ngi Bujri, Caitlynne Johnson
+Date: 09-14-2023
+Description: Base layout component
+Source: Professor Krasso, Angular.io -->
+
 <app-nav></app-nav> <!-- website navbar -->
 
 <main>
