--- a/src/app/security/signin/signin.component.html
+++ b/src/app/security/signin/signin.component.html
@@ -7,11 +7,11 @@
 
 <!-- container -->
 <div class="container text-center">
-  <h1>Bob's Computer Repair Shop</h1>
+  <h1 class="mt-5">Bob's Computer Repair Shop</h1>
   <div class="row justify-content-center mt-5">
     <div class="col-lg-4 col-md-5 col-sm-6">
       <!-- card -->
-      <div class="card">
+      <div class="card shadow p-5">
         <!-- card title -->
         <div class="card-title">
           <h2>User Sign In</h2>
@@ -22,24 +22,24 @@
         <div class="card-body">
           <form>
             <!-- email -->
-            <div>
+            <div class="mb-3">
               <label for="email" class="form-label">Email:</label>
               <input type="text" class="form-control" id="email" />
             </div>
+
             <!-- password -->
-            <div>
+            <div class="mb-3">
               <label for="password" class="form-label">Password:</label>
               <input type="text" class="form-control" id="password" />
             </div>
+
             <!-- buttons -->
-            <div>
-              <button class="btn btn-dark">Sign In</button>
-            </div>
-            <div>
-              <button class="btn btn-dark">Forgot Password?</button>
-            </div>
-            <div>
-              <button class="btn btn-dark">Register</button>
+            <div class="row gy-3 mt-5">
+              <button class="btn btn-dark" type="submit">Sign In</button>
+              <button class="btn btn-dark" routerLink="#">
+                Forgot Password?
+              </button>
+              <button class="btn btn-dark" routerLink="#">Register</button>
             </div>
           </form>
         </div>
