--- a/src/app/admin/users/user-list/user-list.component.html
+++ b/src/app/admin/users/user-list/user-list.component.html
@@ -76,9 +76,9 @@
             </select>
           </div>
           <!-- buttons -->
-          <div class="row mt-5">
-            <button class="col-6 btn btn-dark">Submit</button>
-            <button class="col-6 btn btn-dark">Reset</button>
+          <div class="row mt-5 gy-4">
+            <button class="btn btn-dark">Submit</button>
+            <button class="btn btn-dark">Reset</button>
           </div>
         </form>
       </div>
