--- a/src/app/layouts/nav/nav.component.html
+++ b/src/app/layouts/nav/nav.component.html
@@ -15,7 +15,7 @@ Date: 9/13/23
     <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a routerLink="#" class="nav-link">Home</a>
+                <a routerLink="/home" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
                 <a routerLink="#" class="nav-link">Service Repairs</a>
