--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -4,7 +4,7 @@ Date: 09-13-2023
 Description: Footer component for bcrs
 Source: Professor Krasso, Angular.io -->
 
-<footer class="mt-5 container-fluid text-center bg-dark p-5">
+<footer class="mt-5 container-fluid text-center bg-danger p-5">
   <div class="container p-5 fst-italic">
     <p> &copy; Copyright 2023. All Rights Reserved.</p>
     <p><a href="mailto:support@bcrs.com" class=" text-underline-hover">support@bcrs.com</a>
