--- a/src/app/admin/users/user-list/user-list.component.html
+++ b/src/app/admin/users/user-list/user-list.component.html
@@ -9,6 +9,20 @@ Source: Professor Krasso, Angular.io -->
   <!-- page title -->
   <h1 class="text-center mt-3">User Configuration</h1>
 
+  <!-- error messages -->
+  <div class="alert alert-danger text-center" role="alert" *ngIf="errorMessage">
+    {{ errorMessage }}
+  </div>
+
+  <!-- success messages -->
+  <div
+    class="alert alert-success text-center"
+    role="alert"
+    *ngIf="successMessage"
+  >
+    {{ successMessage }}
+  </div>
+
   <div class="row justify-content-center g-5 mt-2">
     <!-- user list table -->
     <div class="col-6">
@@ -39,22 +53,24 @@ Source: Professor Krasso, Angular.io -->
           </div>
           <!-- table body -->
           <tbody *ngFor="let user of users" class="table-striped">
-            <tr>
-              <td>{{ user.email }}</td>
-              <td>{{ user.firstName }}</td>
-              <td>{{ user.lastName }}</td>
-              <td>{{ user.phoneNumber }}</td>
-              <td>{{ user.role }}</td>
-              <!-- place edit and delete buttons below -->
-              <td>
-                <a routerLink="#">
-                  <span class="material-icons text-secondary">edit</span>
-                </a>
-                <a class="link" (click)="deleteUser(user.email)">
-                  <span class="material-icons text-secondary">delete</span>
-                </a>
-              </td>
-            </tr>
+            <ng-container *ngIf="user.isDisabled === false">
+              <tr>
+                <td>{{ user.email }}</td>
+                <td>{{ user.firstName }}</td>
+                <td>{{ user.lastName }}</td>
+                <td>{{ user.phoneNumber }}</td>
+                <td>{{ user.role }}</td>
+                <!-- place edit and delete buttons below -->
+                <td>
+                  <a routerLink="#">
+                    <span class="material-icons text-secondary">edit</span>
+                  </a>
+                  <a class="link" (click)="deleteUser(user.email)">
+                    <span class="material-icons text-secondary">delete</span>
+                  </a>
+                </td>
+              </tr>
+            </ng-container>
           </tbody>
         </table>
       </div>
@@ -63,46 +79,249 @@ Source: Professor Krasso, Angular.io -->
 
     <!-- add user form -->
     <div class="col-4 text-center">
-      <h2>Add User</h2>
       <div class="card-body border p-5">
-        <form>
-          <!-- email input -->
-          <div class="mb-3">
-            <label for="email">Email:</label>
-            <input type="email" class="form-control" />
-          </div>
-          <!-- password input -->
-          <div class="mb-3">
-            <label for="password">Password</label>
-            <input type="password" class="form-control" />
-          </div>
-          <!-- first name input -->
-          <div class="mb-3">
-            <label for="firstName">First Name:</label>
-            <input type="text" class="form-control" />
-          </div>
-          <!-- last name input -->
-          <div class="mb-3">
-            <label for="lastName">Last Name:</label>
-            <input type="text" class="form-control" />
-          </div>
-          <!-- Address input -->
-          <div class="mb-3">
-            <label for="address">Address:</label>
-            <input type="text" class="form-control" />
-          </div>
-          <!-- role input -->
-          <div class="mb-5">
-            <label for="role">Role:</label>
-            <select name="role" id="role" class="form-select">
-              <option value="standard">Standard</option>
-              <option value="admin">Admin</option>
-            </select>
-          </div>
+        <h2>Add User</h2>
+        <form
+          [formGroup]="addUserForm"
+          (ngSubmit)="createUser(); addUserForm.reset()"
+        >
+          <fieldset class="form-group">
+            <!-- email error handling -->
+            <div
+              *ngIf="
+                addUserForm.controls['email'].touched &&
+                addUserForm.controls['email'].hasError('required')
+              "
+            >
+              <div
+                class="alert alert-danger alert-dismissible fade show"
+                role="alert"
+              >
+                Email is required.
+                <button
+                  type="button"
+                  class="btn-close"
+                  data-bs-dismiss="alert"
+                  aria-label="close"
+                ></button>
+              </div>
+            </div>
+            <div *ngIf="addUserForm.controls['email'].hasError('email')">
+              <div
+                class="alert alert-danger alert-dismissible fade show"
+                role="alert"
+              >
+                Please enter a valid email address.
+                <button
+                  type="button"
+                  class="btn-close"
+                  data-bs-dismiss="alert"
+                  aria-label="close"
+                ></button>
+              </div>
+            </div>
+            <!-- end email error handling -->
+
+            <!-- email input -->
+            <div class="mb-3">
+              <label for="email">*Email:</label>
+              <input
+                type="email"
+                class="form-control"
+                id="email"
+                formControlName="email"
+                required
+              />
+            </div>
+
+            <!-- password error handling -->
+            <div
+              *ngIf="
+                addUserForm.controls['password'].touched &&
+                addUserForm.controls['password'].hasError('required')
+              "
+            >
+              <div
+                class="alert alert-danger alert-dismissible fade show"
+                role="alert"
+              >
+                Password is required.
+                <button
+                  type="button"
+                  class="btn-close"
+                  data-bs-dismiss="alert"
+                  aria-label="close"
+                ></button>
+              </div>
+            </div>
+            <div *ngIf="addUserForm.controls['password'].hasError('pattern')">
+              <div
+                class="alert alert-danger alert-dismissible fade show"
+                role="alert"
+              >
+                Password must be 8 character and contain one upper and lowercase
+                letter, and one number
+                <button
+                  type="button"
+                  class="btn-close"
+                  data-bs-dismiss="alert"
+                  aria-label="close"
+                ></button>
+              </div>
+            </div>
+            <!-- end password error handling -->
+
+            <!-- password input -->
+            <div class="mb-3">
+              <label for="password">*Password</label>
+              <input
+                type="password"
+                class="form-control"
+                id="password"
+                required
+                formControlName="password"
+              />
+            </div>
+
+            <!-- first name input error handling -->
+            <div
+              *ngIf="
+                addUserForm.controls['firstName'].touched &&
+                addUserForm.controls['firstName'].hasError('required')
+              "
+            >
+              <div
+                class="alert alert-danger alert-dismissible fade show"
+                role="alert"
+              >
+                First name is required.
+                <button
+                  type="button"
+                  class="btn-close"
+                  data-bs-dismiss="alert"
+                  aria-label="close"
+                ></button>
+              </div>
+            </div>
+            <!-- end first name error handling -->
+
+            <!-- first name input -->
+            <div class="mb-3">
+              <label for="firstName">*First Name:</label>
+              <input
+                type="text"
+                class="form-control"
+                id="firstName"
+                formControlName="firstName"
+                required
+              />
+            </div>
+
+            <!-- last name error handling -->
+            <div
+              *ngIf="
+                addUserForm.controls['lastName'].touched &&
+                addUserForm.controls['lastName'].hasError('required')
+              "
+            >
+              <div
+                class="alert alert-danger alert-dismissible fade show"
+                role="alert"
+              >
+                Last name is required.
+                <button
+                  type="button"
+                  class="btn-close"
+                  data-bs-dismiss="alert"
+                  aria-label="close"
+                ></button>
+              </div>
+            </div>
+            <!-- end last name error handling -->
+
+            <!-- last name input -->
+            <div class="mb-3">
+              <label for="lastName">*Last Name:</label>
+              <input
+                type="text"
+                class="form-control"
+                id="lastName"
+                formControlName="lastName"
+                required
+              />
+            </div>
+            <!-- Address input -->
+            <div class="mb-3">
+              <label for="address">Address:</label>
+              <input
+                type="text"
+                class="form-control"
+                formControlName="address"
+                id="address"
+              />
+            </div>
+            <!-- phone input -->
+            <div class="mb-3">
+              <label for="phoneNumber">Phone:</label>
+              <input
+                type="text"
+                class="form-control"
+                formControlName="phoneNumber"
+                id="phoneNumber"
+              />
+            </div>
+
+            <!-- role error handling -->
+            <div
+              *ngIf="
+                addUserForm.controls['role'].touched &&
+                addUserForm.controls['role'].hasError('required')
+              "
+            >
+              <div
+                class="alert alert-danger alert-dismissible fade show"
+                role="alert"
+              >
+                Role is required.
+                <button
+                  type="button"
+                  class="btn-close"
+                  data-bs-dismiss="alert"
+                  aria-label="close"
+                ></button>
+              </div>
+            </div>
+            <!-- end role error handling -->
+
+            <!-- role input -->
+            <div class="mb-5">
+              <label for="role">*Role:</label>
+              <select
+                name="role"
+                id="role"
+                class="form-select"
+                formControlName="role"
+                required
+              >
+                <option value="standard">Standard</option>
+                <option value="admin">Admin</option>
+              </select>
+            </div>
+          </fieldset>
+          <!-- note -->
+          <p><strong>*Required Fields</strong></p>
           <!-- buttons -->
           <div class="row mt-5 gy-4">
-            <button class="btn btn-dark">Submit</button>
-            <button class="btn btn-dark">Reset</button>
+            <button
+              type="submit"
+              class="btn btn-dark"
+              [disabled]="!addUserForm.valid"
+            >
+              Submit
+            </button>
+            <button class="btn btn-dark" (click)="addUserForm.reset()">
+              Reset
+            </button>
           </div>
         </form>
       </div>
