add type button to button

--- a/src/app/admin/users/user-list/user-list.component.html
+++ b/src/app/admin/users/user-list/user-list.component.html
@@ -319,7 +319,11 @@ Source: Professor Krasso, Angular.io -->
             >
               Submit
             </button>
-            <button class="btn btn-dark" (click)="addUserForm.reset()">
+            <button
+              type="button"
+              class="btn btn-dark"
+              (click)="addUserForm.reset()"
+            >
               Reset
             </button>
           </div>
