--- a/src/app/layouts/nav/nav.component.html
+++ b/src/app/layouts/nav/nav.component.html
@@ -1,39 +1,38 @@
 <!-- Title: nav.component.html
 Modified by: Caitlynne Johnson
-Date: 9/13/23 
+Date: 9/13/23
 -->
 
 <nav class="ps-3 navbar navbar-expand-sm navbar-danger bg-danger fixed top">
-    <a routeLink="/" class="navbar-brand">Bob's Computer Repair Services</a>
+  <a routeLink="/" class="navbar-brand">Bob's Computer Repair Services</a>
 
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
+    aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-    <!-- navigation links -->
+  <!-- navigation links -->
 
-    <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a routerLink="/home" class="nav-link">Home</a>
-            </li>
-            <li class="nav-item">
-                <a routerLink="#" class="nav-link">Service Repairs</a>
-            </li>
-            <li class="nav-item">
-                <a routerLink="#" class="nav-link">Employees</a>
-            </li>
-            <li class="nav-item">
-                <a routerLink="#" class="nav-link">FAQ</a>
-            </li>
-            <li class="nav-item">
-                <a routerLink="#" class="nav-link">User Config</a>
-            </li>
-            <li class="nav-item">
-                <a routerLink="#" class="nav-link">Service Graphs</a>
-            </li>
-        </ul>
-    </div>
-
+  <div class="collapse navbar-collapse" id="navbarResponsive">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a routerLink="/home" class="nav-link">Home</a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="#" class="nav-link">Service Repairs</a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="#" class="nav-link">Employees</a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="#" class="nav-link">FAQ</a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="#" class="nav-link">User Config</a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="#" class="nav-link">Service Graphs</a>
+      </li>
+    </ul>
+  </div>
 </nav>
-
