--- a/src/app/layouts/nav/nav.component.html
+++ b/src/app/layouts/nav/nav.component.html
@@ -34,12 +34,14 @@ Date: 9/13/23
       <li class="nav-item">
         <a routerLink="#" class="nav-link">FAQ</a>
       </li>
-      <li class="nav-item">
-        <a routerLink="" class="nav-link">User Config</a>
-      </li>
-      <li class="nav-item">
-        <a routerLink="#" class="nav-link">Service Graphs</a>
-      </li>
+      <ng-container *ngIf="sessionUser.role === 'admin'">
+        <li class="nav-item">
+          <a routerLink="/admin/users" class="nav-link">User Config</a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="#" class="nav-link">Service Graphs</a>
+        </li>
+      </ng-container>
 
       <!-- drop down -->
       <li class="nav-item dropdown" *ngIf="isSignedIn">
