fix email error message style

--- a/src/app/security/signin/signin.component.html
+++ b/src/app/security/signin/signin.component.html
@@ -54,13 +54,18 @@
                 signinForm.controls['email'].hasError('email')
               "
             >
-              Please enter a valid email address.
-              <input
-                type="button"
-                class="btn-close"
-                data-bs-dismiss="alert"
-                aria-label="close"
-              />
+              <div
+                class="alert alert-danger alert-dismissible fade show"
+                role="alert"
+              >
+                Please enter a valid email address.
+                <input
+                  type="button"
+                  class="btn-close"
+                  data-bs-dismiss="alert"
+                  aria-label="close"
+                />
+              </div>
             </div>
             <!-- end email error handling -->
 
@@ -103,14 +108,19 @@
                 signinForm.controls['password'].hasError('password')
               "
             >
-              Password must be at least 8 characters long and contain one
-              uppercase and lowercase letter, and one number
-              <input
-                type="button"
-                class="btn-close"
-                data-bs-dismiss="alert"
-                aria-label="close"
-              />
+              <div
+                class="alert alert-danger alert-dismissible fade show"
+                role="alert"
+              >
+                Password must be at least 8 characters long and contain one
+                uppercase and lowercase letter, and one number
+                <input
+                  type="button"
+                  class="btn-close"
+                  data-bs-dismiss="alert"
+                  aria-label="close"
+                />
+              </div>
             </div>
 
             <!-- password input -->
